--- a/Matematikkboka 1HS - Interaktiv.ipynb
+++ b/Matematikkboka 1HS - Interaktiv.ipynb
@@ -5,54 +5,49 @@
    "id": "5a27e243",
    "metadata": {},
    "source": [
-    "# 📚 Innholdsfortegnelse\n",
+    "<h1>Innholdsfortegnelse</h1>\n",
     "\n",
-    "## 0 Systemsjekk og kalender\n",
-    "- [0.1 Systemsjekk](#0.1-Systemsjekk)\n",
-    "- [0.2 Kalender](#0.2-Kalender)\n",
-    "\n",
-    "## 1 Grunnleggende regning\n",
-    "- [1.1 Hoderegning](#1.1-Hoderegning)\n",
-    "- [1.2 Multiplikasjon og divisjon](#1.2-Multiplikasjon-og-divisjon)\n",
-    "- [1.3 Overslagsregning](#1.3-Overslagsregning)\n",
-    "- [1.4 Brøk](#1.4-Brøk)\n",
-    "- [1.5 Regne med brøk](#1.5-Regne-med-brøk)\n",
-    "- [1.6 Prosent](#1.6-Prosent)\n",
-    "- [1.7 Prosentvis endring](#1.7-Prosentvis-endring)\n",
-    "\n",
-    "## 2 Personlig økonomi\n",
-    "- [2.1 Regneark](#2.1-Regneark)\n",
-    "- [2.2 Lønn og skatt](#2.2-Lønn-og-skatt)\n",
-    "- [2.3 Sparing](#2.3-Sparing)\n",
-    "- [2.4 Lån](#2.4-Lån)\n",
-    "- [2.5 Kredittkort](#2.5-Kredittkort)\n",
-    "- [2.6 Økonomiske valg](#2.6-Økonomiske-valg)\n",
-    "\n",
-    "## 3 Formler og geometri\n",
-    "- [3.1 Formlerregning](#3.1-Formlerregning)\n",
-    "- [3.2 Formler og likninger](#3.2-Formler-og-likninger)\n",
-    "- [3.3 Enheter](#3.3-Enheter)\n",
-    "- [3.4 Forhold](#3.4-Forhold)\n",
-    "- [3.5 Formlikhet](#3.5-Formlikhet)\n",
-    "- [3.6 Pytagoras](#3.6-Pytagoras)\n",
-    "- [3.7 Areal](#3.7-Areal)\n",
-    "- [3.8 Volum og overflateareal](#3.8-Volum-og-overflateareal)\n",
-    "- [3.9 Design og produktutvikling](#3.9-Design-og-produktutvikling)\n",
-    "\n",
-    "## 4 Statistikk\n",
-    "- [4.1 Tabeller og grafiske framstillinger](#4.1-Tabeller-og-grafiske-framstillinger)\n",
-    "- [4.2 Søylediagrammer og sektordiagrammer](#4.2-Søylediagrammer-og-sektordiagrammer)\n",
-    "- [4.3 Linjediagrammer](#4.3-Linjediagrammer)\n",
-    "- [4.4 Ulike framstillinger av statistisk datamateriale](#4.4-Ulike-framstillinger-av-statistisk-datamateriale)\n",
-    "- [4.5 Statistiske undersøkelser](#4.5-Statistiske-undersøkelser)\n",
-    "- [4.6 Større datamengder](#4.6-Større-datamengder)\n",
-    "\n",
-    "## 5 Yrkesøkonomi\n",
-    "- [5.1 Inntekter og kostnader](#5.1-Inntekter-og-kostnader)\n",
-    "- [5.2 Merverdiavgift](#5.2-Merverdiavgift)\n",
-    "- [5.3 Priskalkyler](#5.3-Priskalkyler)\n",
-    "- [5.4 Budsjett](#5.4-Budsjett)\n",
-    "- [5.5 Anbud](#5.5-Anbud)"
+    "- [0 Systemsjekk og kalender](#0-Systemsjekk-og-kalender)\n",
+    "    - [0.1 Systemsjekk](#0.1-Systemsjekk)\n",
+    "    - [0.2 Kalender](#0.2-Kalender)\n",
+    "- [1 Grunnleggende regning](#1.0-Grunnleggende-regning)\n",
+    "    - [1.1 Hoderegning](#1.1-Hoderegning)\n",
+    "    - [1.2 Multiplikasjon og divisjon](#1.2-Multiplikasjon-og-divisjon)\n",
+    "    - [1.3 Overslagsregning](#1.3-Overslagsregning)\n",
+    "    - [1.4 Brok](#1.4-Brok)\n",
+    "    - [1.5 Regne med brok](#1.5-Regne-med-brok)\n",
+    "    - [1.6 Prosent](#1.6-Prosent)\n",
+    "    - [1.7 Prosentvis endring](#1.7-Prosentvis-endring)\n",
+    "- [2 Personlig okonomi](#2-Personlig-okonomi)\n",
+    "    - [2.1 Regneark](#2.1-Regneark)\n",
+    "    - [2.2 Lonn og skatt](#2.2-Lonn-og-skatt)\n",
+    "    - [2.3 Sparing](#2.3-Sparing)\n",
+    "    - [2.4 Lan](#2.4-Lan)\n",
+    "    - [2.5 Kredittkort](#2.5-Kredittkort)\n",
+    "    - [2.6 Okonomiske valg](#2.6-Okonomiske-valg)\n",
+    "- [3 Formler og geometri](#3-Formler-og-geometri)\n",
+    "    - [3.1 Formlerregning](#3.1-Formlerregning)\n",
+    "    - [3.2 Formler og likninger](#3.2-Formler-og-likninger)\n",
+    "    - [3.3 Enheter](#3.3-Enheter)\n",
+    "    - [3.4 Forhold](#3.4-Forhold)\n",
+    "    - [3.5 Formlikhet](#3.5-Formlikhet)\n",
+    "    - [3.6 Pytagoras](#3.6-Pytagoras)\n",
+    "    - [3.7 Areal](#3.7-Areal)\n",
+    "    - [3.8 Volum og overflateareal](#3.8-Volum-og-overflateareal)\n",
+    "    - [3.9 Design og produktutvikling](#3.9-Design-og-produktutvikling)\n",
+    "- [4 Statistikk](#4-Statistikk)\n",
+    "    - [4.1 Tabeller og grafiske framstillinger](#4.1-Tabeller-og-grafiske-framstillinger)\n",
+    "    - [4.2 Soylediagrammer og sektordiagrammer](#4.2-Soylediagrammer-og-sektordiagrammer)\n",
+    "    - [4.3 Linjediagrammer](#4.3-Linjediagrammer)\n",
+    "    - [4.4 Ulike framstillinger av statistisk datamateriale](#4.4-Ulike-framstillinger-av-statistisk-datamateriale)\n",
+    "    - [4.5 Statistiske undersokelser](#4.5-Statistiske-undersokelser)\n",
+    "    - [4.6 Storre datamengder](#4.6-Større-datamengder)\n",
+    "- [5 Yrkesokonomi](#5-Yrkesokonomi)\n",
+    "    - [5.1 Inntekter og kostnader](#5.1-Inntekter-og-kostnader)\n",
+    "    - [5.2 Merverdiavgift](#5.2-Merverdiavgift)\n",
+    "    - [5.3 Priskalkyler](#5.3-Priskalkyler)\n",
+    "    - [5.4 Budsjett](#5.4-Budsjett)\n",
+    "    - [5.5 Anbud](#5.5-Anbud)"
    ]
   },
   {
@@ -60,7 +55,10 @@
    "id": "cdcc5e4e",
    "metadata": {},
    "source": [
-    "# 0 Systemsjekk og kalender\n"
+    "# 0 Systemsjekk og kalender\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -69,20 +67,18 @@
    "metadata": {},
    "source": [
     "## 0.1 Systemsjekk\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a01daa28",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 0.2 Kalender\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -90,7 +86,11 @@
    "id": "197fcf7b",
    "metadata": {},
    "source": [
-    "# 1 Grunnleggende regning\n"
+    "# 1 Grunnleggende regning\n",
+    "<a id='1.0-Grunnleggende-regning'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -99,10 +99,7 @@
    "metadata": {},
    "source": [
     "## 1.1 Hoderegning\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -111,9 +108,7 @@
    "metadata": {},
    "source": [
     "## 1.2 Multiplikasjon og divisjon\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -122,8 +117,7 @@
    "metadata": {},
    "source": [
     "## 1.3 Overslagsregning\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -131,11 +125,8 @@
    "id": "7e02740f",
    "metadata": {},
    "source": [
-    "## 1.4 Brøk\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "## 1.4 Brok\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -143,10 +134,8 @@
    "id": "5ed6ff70",
    "metadata": {},
    "source": [
-    "## 1.5 Regne med brøk\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "## 1.5 Regne med brok\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -155,9 +144,7 @@
    "metadata": {},
    "source": [
     "## 1.6 Prosent\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -166,9 +153,7 @@
    "metadata": {},
    "source": [
     "## 1.7 Prosentvis endring\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -176,7 +161,11 @@
    "id": "26e98f87",
    "metadata": {},
    "source": [
-    "# 2 Personlig økonomi\n"
+    "# 2 Personlig okonomi\n",
+    "<a id='2-Personlig-okonomi'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -185,8 +174,7 @@
    "metadata": {},
    "source": [
     "## 2.1 Regneark\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -194,10 +182,8 @@
    "id": "14dd986e",
    "metadata": {},
    "source": [
-    "## 2.2 Lønn og skatt\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "## 2.2 Lonn og skatt\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -206,9 +192,7 @@
    "metadata": {},
    "source": [
     "## 2.3 Sparing\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -216,11 +200,8 @@
    "id": "a52f2254",
    "metadata": {},
    "source": [
-    "## 2.4 Lån\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "## 2.4 Lan\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -229,9 +210,7 @@
    "metadata": {},
    "source": [
     "## 2.5 Kredittkort\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -239,10 +218,8 @@
    "id": "5520a1b5",
    "metadata": {},
    "source": [
-    "## 2.6 Økonomiske valg\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "## 2.6 Okonomiske valg\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -250,7 +227,11 @@
    "id": "4ae31208",
    "metadata": {},
    "source": [
-    "# 3 Formler og geometri\n"
+    "# 3 Formler og geometri\n",
+    "<a id='2-Personlig-okonomi'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -259,9 +240,7 @@
    "metadata": {},
    "source": [
     "## 3.1 Formlerregning\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -270,10 +249,7 @@
    "metadata": {},
    "source": [
     "## 3.2 Formler og likninger\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -282,10 +258,7 @@
    "metadata": {},
    "source": [
     "## 3.3 Enheter\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -294,8 +267,7 @@
    "metadata": {},
    "source": [
     "## 3.4 Forhold\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -304,23 +276,18 @@
    "metadata": {},
    "source": [
     "## 3.5 Formlikhet\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "4d254bf3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3.6 Pytagoras\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "Eksempel LaTeX-formel: \n",
-    "\n",
-    "$$ a^2 + b^2 = c^2 $$\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -334,12 +301,12 @@
   {
    "cell_type": "markdown",
    "id": "5f22c688",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3.7 Areal\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -353,12 +320,12 @@
   {
    "cell_type": "markdown",
    "id": "6218889a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3.8 Volum og overflateareal\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -372,12 +339,12 @@
   {
    "cell_type": "markdown",
    "id": "ef66b5a9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3.9 Design og produktutvikling\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -393,7 +360,11 @@
    "id": "e44b6dda",
    "metadata": {},
    "source": [
-    "# 4 Statistikk\n"
+    "# 4 Statistikk\n",
+    "<a id='4-Statistikk'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -402,9 +373,7 @@
    "metadata": {},
    "source": [
     "## 4.1 Tabeller og grafiske framstillinger\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -412,9 +381,8 @@
    "id": "7f4177f7",
    "metadata": {},
    "source": [
-    "## 4.2 Søylediagrammer og sektordiagrammer\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "## 4.2 Soylediagrammer og sektordiagrammer\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -423,9 +391,7 @@
    "metadata": {},
    "source": [
     "## 4.3 Linjediagrammer\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -434,9 +400,7 @@
    "metadata": {},
    "source": [
     "## 4.4 Ulike framstillinger av statistisk datamateriale\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -444,10 +408,8 @@
    "id": "548d250f",
    "metadata": {},
    "source": [
-    "## 4.5 Statistiske undersøkelser\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "## 4.5 Statistiske undersokelser\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -455,9 +417,8 @@
    "id": "af2b4d79",
    "metadata": {},
    "source": [
-    "## 4.6 Større datamengder\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "## 4.6 Storre datamengder\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -465,7 +426,11 @@
    "id": "c4e4554e",
    "metadata": {},
    "source": [
-    "# 5 Yrkesøkonomi\n"
+    "# 5 Yrkesokonomi\n",
+    "<a id='5-Yrkesokonomi'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -474,9 +439,7 @@
    "metadata": {},
    "source": [
     "## 5.1 Inntekter og kostnader\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -485,8 +448,7 @@
    "metadata": {},
    "source": [
     "## 5.2 Merverdiavgift\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -495,8 +457,7 @@
    "metadata": {},
    "source": [
     "## 5.3 Priskalkyler\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -505,20 +466,27 @@
    "metadata": {},
    "source": [
     "## 5.4 Budsjett\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "20c4fb70",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5.5 Anbud\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47b455cf-cda3-4c99-93e1-f5dd932a3319",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -537,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.14.1"
   }
  },
  "nbformat": 4,
