--- a/Matematikkboka 1IM - Interaktiv.ipynb
+++ b/Matematikkboka 1IM - Interaktiv.ipynb
@@ -5,55 +5,49 @@
    "id": "5a27e243",
    "metadata": {},
    "source": [
-    "# 📚 Innholdsfortegnelse\n",
+    "<h1>Innholdsfortegnelse</h1>\n",
     "\n",
-    "## 0 Systemsjekk og kalender\n",
-    "- [0.1 Systemsjekk](#0.1-Systemsjekk)\n",
-    "- [0.2 Kalender](#0.2-Kalender)\n",
-    "\n",
-    "## 1 Grunnleggende regning\n",
-    "- [1.1 Hoderegning](#1.1-Hoderegning)\n",
-    "- [1.2 Multiplikasjon og divisjon](#1.2-Multiplikasjon-og-divisjon)\n",
-    "- [1.3 Overslagsregning](#1.3-Overslagsregning)\n",
-    "- [1.4 Brok](#1.4-Brok)\n",
-    "- [1.5 Regne med brok](#1.5-Regne-med-brok)\n",
-    "- [1.6 Prosent](#1.6-Prosent)\n",
-    "- [1.7 Prosentvis endring](#1.7-Prosentvis-endring)\n",
-    "\n",
-    "## 2 Personlig økonomi\n",
-    "- [2.1 Regneark](#2.1-Regneark)\n",
-    "- [2.2 Lonn og skatt](#2.2-Lonn-og-skatt)\n",
-    "- [2.3 Sparing](#2.3-Sparing)\n",
-    "- [2.4 Lan](#2.4-Lan)\n",
-    "- [2.5 Kredittkort](#2.5-Kredittkort)\n",
-    "- [2.6 Okonomiske valg](#2.6-Okonomiske-valg)\n",
-    "\n",
-    "## 3 Formler og geometri\n",
-    "- [3.1 Formlerregning](#3.1-Formlerregning)\n",
-    "- [3.2 Formler og likninger](#3.2-Formler-og-likninger)\n",
-    "- [3.3 Enheter](#3.3-Enheter)\n",
-    "- [3.4 Forhold](#3.4-Forhold)\n",
-    "- [3.5 Formlikhet](#3.5-Formlikhet)\n",
-    "- [3.6 Pytagoras](#3.6-Pytagoras)\n",
-    "- [3.7 Areal](#3.7-Areal)\n",
-    "- [3.8 Volum og overflateareal](#3.8-Volum-og-overflateareal)\n",
-    "- [3.9 Design og produktutvikling](#3.9-Design-og-produktutvikling)\n",
-    "\n",
-    "## 4 Statistikk\n",
-    "- [4.1 Tabeller og grafiske framstillinger](#4.1-Tabeller-og-grafiske-framstillinger)\n",
-    "- [4.2 Soylediagrammer og sektordiagrammer](#4.2-Soylediagrammer-og-sektordiagrammer)\n",
-    "- [4.3 Linjediagrammer](#4.3-Linjediagrammer)\n",
-    "- [4.4 Ulike framstillinger av statistisk datamateriale](#4.4-Ulike-framstillinger-av-statistisk-datamateriale)\n",
-    "- [4.5 Statistiske undersokelser](#4.5-Statistiske-undersokelser)\n",
-    "- [4.6 Storre datamengder](#4.6-Storre-datamengder)\n",
-    "\n",
-    "## 5 Yrkesøkonomi\n",
-    "- [5.1 Inntekter og kostnader](#5.1-Inntekter-og-kostnader)\n",
-    "- [5.2 Merverdiavgift](#5.2-Merverdiavgift)\n",
-    "- [5.3 Priskalkyler](#5.3-Priskalkyler)\n",
-    "- [5.4 Budsjett](#5.4-Budsjett)\n",
-    "- [5.5 Anbud](#5.5-Anbud)\n",
-    "- [5.6 Velferdsteknologi](#5.6-Velferdsteknologi)"
+    "- [0 Systemsjekk og kalender](#0-Systemsjekk-og-kalender)\n",
+    "    - [0.1 Systemsjekk](#0.1-Systemsjekk)\n",
+    "    - [0.2 Kalender](#0.2-Kalender)\n",
+    "- [1 Grunnleggende regning](#1.0-Grunnleggende-regning)\n",
+    "    - [1.1 Hoderegning](#1.1-Hoderegning)\n",
+    "    - [1.2 Multiplikasjon og divisjon](#1.2-Multiplikasjon-og-divisjon)\n",
+    "    - [1.3 Overslagsregning](#1.3-Overslagsregning)\n",
+    "    - [1.4 Brok](#1.4-Brok)\n",
+    "    - [1.5 Regne med brok](#1.5-Regne-med-brok)\n",
+    "    - [1.6 Prosent](#1.6-Prosent)\n",
+    "    - [1.7 Prosentvis endring](#1.7-Prosentvis-endring)\n",
+    "- [2 Personlig okonomi](#2-Personlig-okonomi)\n",
+    "    - [2.1 Regneark](#2.1-Regneark)\n",
+    "    - [2.2 Lonn og skatt](#2.2-Lonn-og-skatt)\n",
+    "    - [2.3 Sparing](#2.3-Sparing)\n",
+    "    - [2.4 Lan](#2.4-Lan)\n",
+    "    - [2.5 Kredittkort](#2.5-Kredittkort)\n",
+    "    - [2.6 Okonomiske valg](#2.6-Okonomiske-valg)\n",
+    "- [3 Formler og geometri](#3-Formler-og-geometri)\n",
+    "    - [3.1 Formlerregning](#3.1-Formlerregning)\n",
+    "    - [3.2 Formler og likninger](#3.2-Formler-og-likninger)\n",
+    "    - [3.3 Enheter](#3.3-Enheter)\n",
+    "    - [3.4 Forhold](#3.4-Forhold)\n",
+    "    - [3.5 Formlikhet](#3.5-Formlikhet)\n",
+    "    - [3.6 Pytagoras](#3.6-Pytagoras)\n",
+    "    - [3.7 Areal](#3.7-Areal)\n",
+    "    - [3.8 Volum og overflateareal](#3.8-Volum-og-overflateareal)\n",
+    "    - [3.9 Design og produktutvikling](#3.9-Design-og-produktutvikling)\n",
+    "- [4 Statistikk](#4-Statistikk)\n",
+    "    - [4.1 Tabeller og grafiske framstillinger](#4.1-Tabeller-og-grafiske-framstillinger)\n",
+    "    - [4.2 Soylediagrammer og sektordiagrammer](#4.2-Soylediagrammer-og-sektordiagrammer)\n",
+    "    - [4.3 Linjediagrammer](#4.3-Linjediagrammer)\n",
+    "    - [4.4 Ulike framstillinger av statistisk datamateriale](#4.4-Ulike-framstillinger-av-statistisk-datamateriale)\n",
+    "    - [4.5 Statistiske undersokelser](#4.5-Statistiske-undersokelser)\n",
+    "    - [4.6 Storre datamengder](#4.6-Større-datamengder)\n",
+    "- [5 Yrkesokonomi](#5-Yrkesokonomi)\n",
+    "    - [5.1 Inntekter og kostnader](#5.1-Inntekter-og-kostnader)\n",
+    "    - [5.2 Merverdiavgift](#5.2-Merverdiavgift)\n",
+    "    - [5.3 Priskalkyler](#5.3-Priskalkyler)\n",
+    "    - [5.4 Budsjett](#5.4-Budsjett)\n",
+    "    - [5.5 Anbud](#5.5-Anbud)"
    ]
   },
   {
@@ -61,7 +55,10 @@
    "id": "cdcc5e4e",
    "metadata": {},
    "source": [
-    "# 0 Systemsjekk og kalender\n"
+    "# 0 Systemsjekk og kalender\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -72,9 +69,7 @@
    },
    "source": [
     "## 0.1 Systemsjekk\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -96,9 +91,7 @@
    },
    "source": [
     "## 0.2 Kalender\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -139,7 +132,11 @@
    "id": "197fcf7b",
    "metadata": {},
    "source": [
-    "# 1 Grunnleggende regning\n"
+    "# 1 Grunnleggende regning\n",
+    "<a id='1.0-Grunnleggende-regning'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -150,10 +147,7 @@
    },
    "source": [
     "## 1.1 Hoderegning\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -201,9 +195,7 @@
    },
    "source": [
     "## 1.2 Multiplikasjon og divisjon\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -433,8 +425,7 @@
    },
    "source": [
     "## 1.3 Overslagsregning\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -533,10 +524,7 @@
    },
    "source": [
     "## 1.4 Brok\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -736,9 +724,7 @@
    },
    "source": [
     "## 1.5 Regne med brok\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -1321,9 +1307,7 @@
    },
    "source": [
     "## 1.6 Prosent\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -1851,9 +1835,7 @@
    },
    "source": [
     "## 1.7 Prosentvis endring\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -2561,7 +2543,11 @@
    "id": "26e98f87",
    "metadata": {},
    "source": [
-    "# 2 Personlig økonomi\n"
+    "# 2 Personlig okonomi\n",
+    "<a id='2-Personlig okonomi'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -2572,8 +2558,7 @@
    },
    "source": [
     "## 2.1 Regneark\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -2650,9 +2635,7 @@
    },
    "source": [
     "## 2.2 Lonn og skatt\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -2877,9 +2860,7 @@
    },
    "source": [
     "## 2.3 Sparing\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -3069,10 +3050,7 @@
    },
    "source": [
     "## 2.4 Lan\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -3542,9 +3520,7 @@
    },
    "source": [
     "## 2.5 Kredittkort\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -3768,9 +3744,7 @@
    },
    "source": [
     "## 2.6 Okonomiske valg\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -4062,7 +4036,11 @@
    "id": "4ae31208",
    "metadata": {},
    "source": [
-    "# 3 Formler og geometri\n"
+    "# 3 Formler og geometri\n",
+    "<a id='3-Formler-og-geometri'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -4073,9 +4051,7 @@
    },
    "source": [
     "## 3.1 Formlerregning\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -4361,13 +4337,12 @@
   {
    "cell_type": "markdown",
    "id": "947bbdbe",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3.2 Formler og likninger\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -4386,10 +4361,7 @@
    },
    "source": [
     "## 3.3 Enheter\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -4865,8 +4837,7 @@
    },
    "source": [
     "## 3.4 Forhold\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -5044,9 +5015,7 @@
    },
    "source": [
     "## 3.5 Formlikhet\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -5941,10 +5910,9 @@
    },
    "source": [
     "## 3.6 Pytagoras\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>\n",
     "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n",
-    "Eksempel LaTeX-formel: \n",
+    "Pytagora`s setning, a = katet, b = katet og c = hypotenus: \n",
     "\n",
     "$$ a^2 + b^2 = c^2 $$"
    ]
@@ -6203,9 +6171,7 @@
    },
    "source": [
     "## 3.7 Areal\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -6398,9 +6364,7 @@
    },
    "source": [
     "## 3.8 Volum og overflateareal\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -6593,9 +6557,7 @@
    },
    "source": [
     "## 3.9 Design og produktutvikling\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -6820,7 +6782,11 @@
    "id": "e44b6dda",
    "metadata": {},
    "source": [
-    "# 4 Statistikk\n"
+    "# 4 Statistikk\n",
+    "<a id='4-Statistikk'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -6831,9 +6797,7 @@
    },
    "source": [
     "## 4.1 Tabeller og grafiske framstillinger\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -6886,8 +6850,7 @@
    },
    "source": [
     "## 4.2 Soylediagrammer og sektordiagrammer\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -6945,9 +6908,7 @@
    },
    "source": [
     "## 4.3 Linjediagrammer\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7000,12 +6961,12 @@
   {
    "cell_type": "markdown",
    "id": "c4f81f2d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 4.4 Ulike framstillinger av statistisk datamateriale\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7019,12 +6980,12 @@
   {
    "cell_type": "markdown",
    "id": "548d250f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 4.5 Statistiske undersokelser\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7043,8 +7004,7 @@
    },
    "source": [
     "## 4.6 Storre datamengder\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7267,18 +7227,22 @@
    "id": "c4e4554e",
    "metadata": {},
    "source": [
-    "# 5 Yrkesøkonomi\n"
+    "# 5 Yrkesokonomi\n",
+    "<a id='5-Yrkesokonomi'></a>\n",
+    "<p><em>Fyll inn innhold her</em></p>\n",
+    "\n",
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5cf01ea3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5.1 Inntekter og kostnader\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7297,8 +7261,7 @@
    },
    "source": [
     "## 5.2 Merverdiavgift\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7393,8 +7356,7 @@
    },
    "source": [
     "## 5.3 Priskalkyler\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7637,11 +7599,12 @@
   {
    "cell_type": "markdown",
    "id": "5f22282f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5.4 Budsjett\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7660,9 +7623,7 @@
    },
    "source": [
     "## 5.5 Anbud\n",
-    "\n",
-    "*(Skriv inn innhold her)*\n",
-    "\n"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
@@ -7726,8 +7687,7 @@
    },
    "source": [
     "## 5.6 Velferdsteknologi\n",
-    "\n",
-    "*(Skriv inn innhold her)*"
+    "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
