--- a/Matematikkboka 1IM - Interaktiv.ipynb
+++ b/Matematikkboka 1IM - Interaktiv.ipynb
@@ -55,7 +55,9 @@
    "id": "cdcc5e4e",
    "metadata": {},
    "source": [
+    "<a id='0-Systemsjekk-og-kalender'></a>\n",
     "# 0 Systemsjekk og kalender\n",
+    "---\n",
     "<p><em>Fyll inn innhold her</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
@@ -132,9 +134,12 @@
    "id": "197fcf7b",
    "metadata": {},
    "source": [
-    "# 1 Grunnleggende regning\n",
     "<a id='1.0-Grunnleggende-regning'></a>\n",
-    "<p><em>Fyll inn innhold her</em></p>\n",
+    "# 1 Grunnleggende regning\n",
+    "---\n",
+    "<p><em>Tolke og bruke formler som gjelder dagligliv og yrkesliv\n",
+    "\n",
+    "Tolke og bruke sammensatte måleenheter i praktiske sammenhenger og velge egnet måleenhet</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
@@ -2543,9 +2548,10 @@
    "id": "26e98f87",
    "metadata": {},
    "source": [
-    "# 2 Personlig okonomi\n",
     "<a id='2-Personlig okonomi'></a>\n",
-    "<p><em>Fyll inn innhold her</em></p>\n",
+    "# 2 Personlig okonomi\n",
+    "---\n",
+    "<p><em>Vurdere valg knyttet til personlig økonomi og reflektere over konsekvenser av å ta opp lån og bruke kredittkort</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
@@ -4036,9 +4042,14 @@
    "id": "4ae31208",
    "metadata": {},
    "source": [
-    "# 3 Formler og geometri\n",
     "<a id='3-Formler-og-geometri'></a>\n",
-    "<p><em>Fyll inn innhold her</em></p>\n",
+    "# 3 Formler og geometri\n",
+    "---\n",
+    "<p><em>Tolke å bruke formler som gjelder dagligliv og yrkesliv\n",
+    "\n",
+    "Tolke og bruke sammensatte enheter i praktiske sammenhenger og velge egnet måleenhet\n",
+    "\n",
+    "Utforske og bruke geometriske former og forhold og bruke det i design og produktutvikling</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
@@ -6782,9 +6793,10 @@
    "id": "e44b6dda",
    "metadata": {},
    "source": [
-    "# 4 Statistikk\n",
     "<a id='4-Statistikk'></a>\n",
-    "<p><em>Fyll inn innhold her</em></p>\n",
+    "# 4 Statistikk\n",
+    "---\n",
+    "<p><em>Innhente data og behandle store datasett, gjøre beregninger og lage formålstjenlige fremstillinger av resultatene og presentere disse</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
@@ -7227,9 +7239,10 @@
    "id": "c4e4554e",
    "metadata": {},
    "source": [
-    "# 5 Yrkesokonomi\n",
     "<a id='5-Yrkesokonomi'></a>\n",
-    "<p><em>Fyll inn innhold her</em></p>\n",
+    "# 5 Yrkesokonomi\n",
+    "---\n",
+    "<p><em>Lese, bruke og lage regneark i arbeidet med budsjett, anbud og kostnadsberegning knyttet til informasjonsteknologi og medieproduksjon, og vurdere hvordan ulike faktorar påvirker resultatet</em></p>\n",
     "\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
