--- a/Matematikkboka 1HS - Interaktiv.ipynb
+++ b/Matematikkboka 1HS - Interaktiv.ipynb
@@ -415,11 +415,21 @@
   {
    "cell_type": "markdown",
    "id": "af2b4d79",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 4.6 Storre datamengder\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f9c50d1-ee3c-4ec7-b1c6-7e0f9ba16708",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -436,38 +446,78 @@
   {
    "cell_type": "markdown",
    "id": "5cf01ea3",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5.1 Inntekter og kostnader\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57f4cd5d-4ef1-4b06-af66-37cbb457b516",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "0a8b15b5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5.2 Merverdiavgift\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48ca9d01-32f8-4ac5-9c77-52f3fdd36729",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "3086051b",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5.3 Priskalkyler\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85742602-c233-40ff-a118-42e60de22033",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "5f22282f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 5.4 Budsjett\n",
     "<a href=\"#Innholdsfortegnelse\">⬆ Tilbake til innholdsfortegnelse</a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c436092e-0371-4cbf-bafa-5307848fda9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
